--- a/daili2.yaml
+++ b/daili2.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 10.39
   UpdateDay: '2022-05-09T18:30:28.131034'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 43521
+  Rank: 43621
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 13.43
   UpdateDay: '2022-05-09T12:30:26.779353'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 40122
+  Rank: 40217
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -73,7 +73,7 @@ proxies:
   average: 10.28
   UpdateDay: '2022-05-09T18:30:24.984099'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 35388
+  Rank: 35479
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -88,7 +88,7 @@ proxies:
   average: 89.01
   UpdateDay: '2022-05-09T18:30:28.752136'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 29155
+  Rank: 29215
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -103,7 +103,7 @@ proxies:
   average: 33.8
   UpdateDay: '2022-05-09T18:30:28.343521'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 28304
+  Rank: 28404
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -116,7 +116,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 25773
+  Rank: 25864
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -131,7 +131,7 @@ proxies:
   average: 23.21
   UpdateDay: '2022-05-09T18:30:28.322154'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 25420
+  Rank: 25510
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -146,7 +146,7 @@ proxies:
   average: 68.64
   UpdateDay: '2022-05-09T18:30:28.693057'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 23143
+  Rank: 23193
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -161,7 +161,7 @@ proxies:
   average: 81.12
   UpdateDay: '2022-05-09T18:30:28.928411'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 20496
+  Rank: 20526
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -176,7 +176,7 @@ proxies:
   average: 51.1
   UpdateDay: '2022-05-09T18:30:28.441260'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 18993
+  Rank: 19079
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -191,7 +191,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 18030
+  Rank: 18105
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -203,7 +203,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 17819
+  Rank: 17904
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -218,7 +218,7 @@ proxies:
   average: 45.26
   UpdateDay: '2022-05-09T18:30:29.398251'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 17457
+  Rank: 17557
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -230,7 +230,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 16519
+  Rank: 16619
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -245,7 +245,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 15588
+  Rank: 15674
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -260,7 +260,7 @@ proxies:
   average: 41.69
   UpdateDay: '2022-05-09T18:30:28.368244'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 15147
+  Rank: 15197
 - alterId: 0
   cipher: auto
   http-opts:
@@ -285,7 +285,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 14479
+  Rank: 14529
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -300,7 +300,7 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 13022
+  Rank: 13122
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -315,22 +315,22 @@ proxies:
   average: 47.88
   UpdateDay: '2022-05-09T18:30:28.425948'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 12926
-- name: api.tcpbbr.net:443@trojan
-  server: api.tcpbbr.net
+  Rank: 12981
+- name: tky3.ssgnode.ga:443@trojan
+  server: tky3.ssgnode.ga
   port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
-  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
+  country: "\U0001F1EF\U0001F1F5 JP"
+  password: lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.57
-  maximum: 45.89
-  average: 41.02
-  UpdateDay: '2022-05-09T18:30:28.428504'
-  PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 12766
+  minimum: 39.05
+  maximum: 48.12
+  average: 44.71
+  UpdateDay: '2022-05-09T18:30:28.598958'
+  PFirstFoundDay: '2022-05-04T12:30:31.831423'
+  Rank: 12831
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -357,7 +357,7 @@ proxy-groups:
   - 35.153.162.49:27080@vmess
   - zgao.shop:443@trojan
   - ssl.tcpbbr.net:443@trojan
-  - api.tcpbbr.net:443@trojan
+  - tky3.ssgnode.ga:443@trojan
   tolerance: 250
 rules:
 - MATCH,PG-default
