--- a/daili.yaml
+++ b/daili.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  port: 30003
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 30003
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.57
-  maximum: 15.78
-  average: 9.65
-  UpdateDay: '2022-05-09T21:30:40.596518'
+  minimum: 6.66
+  maximum: 8.01
+  average: 7.13
+  UpdateDay: '2022-05-10T00:30:24.104423'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 44017
+  Rank: 44113
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,12 +55,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 10.24
-  maximum: 15.19
-  average: 13.43
-  UpdateDay: '2022-05-09T12:30:26.779353'
+  minimum: 8.8
+  maximum: 16.67
+  average: 13.52
+  UpdateDay: '2022-05-10T00:30:24.103556'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 40617
+  Rank: 40718
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
   port: 50004
@@ -69,12 +69,12 @@ proxies:
   password: '4415934295'
   cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 9.71
-  maximum: 10.09
-  average: 9.9
-  UpdateDay: '2022-05-09T21:30:40.604085'
+  minimum: 9.77
+  maximum: 20.83
+  average: 13.83
+  UpdateDay: '2022-05-10T00:31:57.974505'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 35862
+  Rank: 35955
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -84,12 +84,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 93.75
-  maximum: 102.99
-  average: 99.04
-  UpdateDay: '2022-05-09T21:30:40.867592'
+  minimum: 63.1
+  maximum: 98.77
+  average: 76.88
+  UpdateDay: '2022-05-10T00:31:58.368513'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 29438
+  Rank: 29500
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -99,12 +99,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 20.21
-  maximum: 39.16
-  average: 26.86
-  UpdateDay: '2022-05-09T21:30:40.653248'
+  minimum: 13.25
+  maximum: 48.26
+  average: 36.24
+  UpdateDay: '2022-05-10T00:31:58.049198'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 28776
+  Rank: 28868
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -117,37 +117,37 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 26005
+  Rank: 26009
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
-  port: 20089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 20089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.69
-  maximum: 53.97
-  average: 44.64
-  UpdateDay: '2022-05-09T21:30:40.704936'
+  minimum: 16.38
+  maximum: 28.57
+  average: 21.38
+  UpdateDay: '2022-05-10T00:30:24.108764'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 25864
+  Rank: 25955
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  port: 443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 443
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 96.68
-  maximum: 116.42
-  average: 104.7
-  UpdateDay: '2022-05-09T21:30:40.884443'
+  minimum: 87.04
+  maximum: 98.69
+  average: 92.78
+  UpdateDay: '2022-05-10T00:30:42.134660'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 23386
+  Rank: 23433
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -157,27 +157,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 84.93
-  maximum: 106.4
-  average: 98.68
-  UpdateDay: '2022-05-09T21:30:40.865262'
+  minimum: 113.23
+  maximum: 1122.88
+  average: 452.44
+  UpdateDay: '2022-05-10T00:31:59.561909'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 20660
+  Rank: 20676
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.66
-  maximum: 45.8
-  average: 40.67
-  UpdateDay: '2022-05-09T21:30:40.708241'
+  minimum: 41.57
+  maximum: 1072.87
+  average: 386.37
+  UpdateDay: '2022-05-10T00:30:28.481438'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 19451
+  Rank: 19547
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -192,7 +192,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 18380
+  Rank: 18450
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -204,22 +204,22 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 18169
+  Rank: 18239
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 42.1
-  maximum: 69.74
-  average: 55.9
-  UpdateDay: '2022-05-09T21:30:40.741710'
+  minimum: 92.14
+  maximum: 97.46
+  average: 95.58
+  UpdateDay: '2022-05-10T00:31:21.568075'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 17882
+  Rank: 17901
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -231,7 +231,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 16912
+  Rank: 16953
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -246,22 +246,22 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 16050
+  Rank: 16145
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
   type: trojan
   country: "\U0001F1E8\U0001F1F3 CN"
-  password: SfobRIcergHchqBFzzua
+  password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.39
-  maximum: 53.49
-  average: 46.68
-  UpdateDay: '2022-05-09T21:30:40.731693'
+  minimum: 37.95
+  maximum: 44.95
+  average: 40.65
+  UpdateDay: '2022-05-10T00:31:58.068967'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 15322
+  Rank: 15374
 - alterId: 0
   cipher: auto
   http-opts:
@@ -286,7 +286,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 14615
+  Rank: 14639
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -301,22 +301,22 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 13443
+  Rank: 13487
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
   type: trojan
   country: "\U0001F1EF\U0001F1F5 JP"
-  password: lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272
+  password: 82a115db-6e59-4319-973lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 48.22
-  maximum: 53.88
-  average: 51.85
-  UpdateDay: '2022-05-09T21:30:40.728385'
+  minimum: 41.67
+  maximum: 48.59
+  average: 44.25
+  UpdateDay: '2022-05-10T00:31:58.316499'
   PFirstFoundDay: '2022-05-04T12:30:31.831423'
-  Rank: 13222
+  Rank: 13329
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -326,12 +326,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 50.24
-  maximum: 85.3
-  average: 68.08
-  UpdateDay: '2022-05-09T21:30:40.774421'
+  minimum: 40.03
+  maximum: 47.38
+  average: 42.76
+  UpdateDay: '2022-05-10T00:31:58.236509'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 13211
+  Rank: 13269
 proxy-groups:
 - name: PG-default
   type: fallback
