--- a/daili2.yaml
+++ b/daili2.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 7.3
   UpdateDay: '2022-05-10T09:32:04.921872'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 44988
+  Rank: 45088
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 34.7
   UpdateDay: '2022-05-10T09:30:30.575617'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 41601
+  Rank: 41701
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
   type: ss
@@ -74,7 +74,7 @@ proxies:
   average: 10.24
   UpdateDay: '2022-05-10T09:30:30.516745'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 36841
+  Rank: 36941
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -89,7 +89,7 @@ proxies:
   average: 60.07
   UpdateDay: '2022-05-10T09:32:05.177716'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 30255
+  Rank: 30340
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   type: trojan
@@ -104,7 +104,7 @@ proxies:
   average: 28.04
   UpdateDay: '2022-05-10T09:30:30.569001'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 29700
+  Rank: 29800
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -117,7 +117,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 26869
+  Rank: 26954
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -132,7 +132,7 @@ proxies:
   average: 43.39
   UpdateDay: '2022-05-10T09:32:05.056700'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 26804
+  Rank: 26904
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   type: trojan
@@ -147,7 +147,7 @@ proxies:
   average: 57.66
   UpdateDay: '2022-05-10T09:30:48.790235'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 24279
+  Rank: 24379
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   type: trojan
@@ -162,7 +162,7 @@ proxies:
   average: 85.36
   UpdateDay: '2022-05-10T09:30:48.927559'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 21096
+  Rank: 21146
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -177,7 +177,7 @@ proxies:
   average: 41.29
   UpdateDay: '2022-05-10T09:32:05.114264'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 20442
+  Rank: 20542
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -189,7 +189,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 19099
+  Rank: 19189
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -204,7 +204,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 19015
+  Rank: 19090
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -219,7 +219,7 @@ proxies:
   average: 1932.22
   UpdateDay: '2022-05-10T09:32:11.069380'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 18525
+  Rank: 18620
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -231,7 +231,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 17493
+  Rank: 17562
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -246,7 +246,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 17035
+  Rank: 17125
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -261,7 +261,7 @@ proxies:
   average: 40.25
   UpdateDay: '2022-05-10T09:32:05.044613'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 15732
+  Rank: 15778
 - alterId: 0
   cipher: auto
   http-opts:
@@ -286,7 +286,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 15063
+  Rank: 15113
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
@@ -301,7 +301,7 @@ proxies:
   average: 43.96
   UpdateDay: '2022-05-10T09:32:05.137025'
   PFirstFoundDay: '2022-05-04T12:30:31.831423'
-  Rank: 14218
+  Rank: 14318
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -316,22 +316,22 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 14099
-- name: ssl.tcpbbr.net:443@trojan
-  server: ssl.tcpbbr.net
-  port: 443
+  Rank: 14175
+- name: api.tcpbbr.net:443@trojan
+  server: api.tcpbbr.net
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
-  password: 5a3d9b78-cb5b-11ea-82ef-f23c9164ca5d
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
+  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.96
-  maximum: 47.26
-  average: 42.46
-  UpdateDay: '2022-05-10T09:32:05.119398'
-  PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 13928
+  minimum: 40.78
+  maximum: 1043.57
+  average: 376.53
+  UpdateDay: '2022-05-10T09:30:34.784525'
+  PFirstFoundDay: '2022-03-29T09:34:31.613124'
+  Rank: 13988
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -358,7 +358,7 @@ proxy-groups:
   - 35.153.162.49:27080@vmess
   - tky3.ssgnode.ga:443@trojan
   - zgao.shop:443@trojan
-  - ssl.tcpbbr.net:443@trojan
+  - api.tcpbbr.net:443@trojan
   tolerance: 250
 rules:
 - MATCH,PG-default
